# pyvisa

./: .coverage  .coveragerc  .cvsignore  .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  AUTHORS  CHANGES  CITATION.cff  CONTRIBUTING  COPYING  ChangeLog  LICENSE  MANIFEST.in  README  README.rst  azure-pipelines.yml  bors.toml  code-of-conduct.md  dev-requirements.txt  paper.bib  paper.md  pre-commit-config.yaml  pyproject.toml  pyvisa.py  pyvisa_tester.env.example  readme.txt  setup.cfg  setup.py  tox.ini  upload_docs.sh  visa.py  visa_attributes.py  visa_exceptions.py  visa_messages.py  vpp43-types.py  vpp43.py  vpp43_constants.py  (+1 more)
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  instrument-communication-issue.md
.github/workflows/: ci.yml  docs.yml  release.yml
PyVISA.egg-info/: PKG-INFO  SOURCES.txt  depends.txt  top_level.txt
doc/: .cvsignore  Makefile  conf.py  homepage.txt  index.txt  make.bat  pyvisa.tex  pyvisa.txt  upload_homepage.sh  vpp43.txt
docs/: Makefile  advanced.rst  architecture.rst  backends.rst  conf.py  configuring.rst  contributing.rst  default.css  example.rst  faq.rst  getting.rst  getting_nivisa.rst  index.rst  instruments.rst  legacy_visa.rst  legacy_vpp43.rst  make.bat  migrating.rst  names.rst  pyvisa.rst  pyvisa.txt  requirements.txt  resources.rst  rvalues.rst  shell.rst  tutorial.rst  vpp43.rst
docs/_templates/: sidebarintro.html  sidebarlogo.html
docs/_themes/flask/: theme.conf
docs/_themes/sphinx_rtd_theme/: layout.html  theme.conf
docs/api/: constants.rst  ctwrapper.rst  highlevel.rst  index.rst  legacy.rst  legacy_visa.rst  legacy_vpp43.rst  resourcemanager.rst  resources.rst  visalibrarybase.rst  vpp43.rst
docs/source/: conf.py  index.rst  substitutions.sub
docs/source/advanced/: architecture.rst  backends.rst  continuous_integration.rst  index.rst  testing_harness.rst
docs/source/api/: resources.rst  visalibrarybase.rst
docs/source/faq/: contributing.rst  faq.rst  getting_nivisa.rst  index.rst  migrating.rst  visa_distributions.rst
docs/source/introduction/: communication.rst  configuring.rst  event_handling.rst  example.rst  ext_cfg_util.rst  getting.rst  index.rst  names.rst  resources.rst  rvalues.rst  shell.rst  tutorial.rst
examples/: HP34401A_measure_currents.py  itc4.py  keithley2000.py  oscilloscope.py
joss-paper/: paper.bib
misc/ctypes/: Makefile  ctypes-test.c  ctypes-test.py  minimal.py  vpp43_types.py
pyvisa/: __init__.py  attributes.py  cmd_line_tools.py  constants.py  errors.py  events.py  exceptions.py  highlevel.py  legacy.py  rname.py  shell.py  typing.py  util.py  visa.py  visa_attributes.py  visa_exceptions.py  visa_messages.py  visa_study.py  vpp43.py  vpp43_attributes.py  vpp43_constants.py  vpp43_types.py
pyvisa/compat/: __init__.py  check_output.py  nullhandler.py  struct.py
pyvisa/ctwrapper/: __init__.py  _ct.py  attributes.py  cthelper.py  functions.py  highlevel.py  types.py
pyvisa/legacy/: __init__.py  visa.py  vpp43.py
pyvisa/resources/: __init__.py  async.py  firewire.py  gpib.py  helpers.py  messagebased.py  pxi.py  registerbased.py  resource.py  serial.py  tcpip.py  usb.py  vxi.py
pyvisa/testing/: __init__.py  env_profile.py  hookspec.py  pools.py  profiles.py  providers.py  pytest_plugin.py  requirements.py
pyvisa/testing/contracts/: __init__.py  _command_helpers.py  _event_helpers.py  _resource_matrix.py  conftest.py  test_binary_value_contracts.py  test_identity_contract.py  test_keysight_tcpip_contracts.py  test_message_based_resource_contracts.py  test_resource_capability_stubs.py  test_resource_manager_contracts.py  test_srq_event_contracts.py  test_tcpip_query_contracts.py
pyvisa/testsuite/: __init__.py  conftest.py  test_attributes.py  test_cmd_line_tools.py  test_constants.py  test_env_var_handling.py  test_errors.py  test_event.py  test_highlevel.py  test_itc4.py  test_keithley2000.py  test_logging_utilities.py  test_rname.py  test_util.py  test_visa.py  test_visa_attributes.py
pyvisa/testsuite/fake-extensions/: pyvisa-test.py  pyvisa_test.py  pyvisa_test_open.py
pyvisa/testsuite/fakelibs/: generate_fakelibs.py
pyvisa/testsuite/keysight_assisted_tests/: __init__.py  messagebased_resource_utils.py  resource_utils.py  test_resource_manager.py  test_rname_filter2.py  test_shell.py  test_tcpip_resources.py  test_util.py
pyvisa/testsuite/lxi_assisted_tests/: __init__.py  conftest.py  env_helpers.py  test_binary_values.py  test_srq_events.py  test_tcpip_attributes.py  test_tcpip_resources.py
pyvisa/wrapper/: __init__.py  attributes.py  constants.py  functions.py  types.py
src/: __init__.py  pyvisa.py  visa.py  visa_attributes.py  visa_exceptions.py  visa_messages.py  visa_study.py  vpp43.py  vpp43_attributes.py  vpp43_constants.py  vpp43_types.py
test/: conftest.py  test_itc4.py  test_keithley2000.py  test_visa.py  test_visa_attributes.py  test_visa_study.py
tests/: conftest.py  test_errors.py  test_logging_utilities.py  test_rname.py  test_testing_pools.py  test_testing_profiles.py  test_testing_providers.py  test_util.py
tests/keysight_assisted_tests/: conftest.py  messagebased_resource_utils.py  test_resource_manager.py  test_util.py
tests/pyvisa_tester_assisted_tests/: __init__.py  config.py  conftest.py  env_helpers.py  test_api_shared_resources.py  test_binary_values.py  test_message_based_resources.py  test_resource_capability_stubs.py  test_srq_events.py  test_tcpip_attributes.py  test_tcpip_resources.py  test_usb_resources.py
