[project]
name = "PyVISA"
description = "Python VISA bindings for GPIB, RS232, TCPIP and USB instruments"
readme = "README.rst"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [
  {name = "Torsten Bronger", email = "bronger@physik.rwth-aachen.de"},
  {name = "Gregor Thalhammer"},
  {name = "Hernan E. Grecco", email = "hernan.grecco@gmail.com"}
]
maintainers = [
  {name = "Matthieu C. Dartiailh", email = "m.dartiailh@gmail.com"}
]
keywords = [
    "VISA",
    "GPIB",
    "USB",
    "serial",
    "RS232",
    "measurement",
    "acquisition",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python",
    "Topic :: Scientific/Engineering :: Interface Engine/Protocol Translator",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "typing_extensions",
]
dynamic=["version"]


[project.urls]
homepage = "https://github.com/pyvisa/pyvisa"
documentation = "https://pyvisa.readthedocs.io/en/latest/"
repository = "https://github.com/pyvisa/pyvisa"
changelog = "https://github.com/pyvisa/pyvisa/blob/main/CHANGES"

[project.scripts]
pyvisa-shell = "pyvisa.cmd_line_tools:visa_shell"
pyvisa-info = "pyvisa.cmd_line_tools:visa_info"

[build-system]
requires = ["setuptools>=61.2", "wheel", "setuptools_scm[toml]>=3.4.3"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "pyvisa/version.py"
write_to_template = """
# This file is auto-generated by setuptools-scm do NOT edit it.

from collections import namedtuple

#: A namedtuple of the version info for the current release.
_version_info = namedtuple("_version_info", "major minor micro status")

parts = "{version}".split(".", 3)
version_info = _version_info(
    int(parts[0]),
    int(parts[1]),
    int(parts[2]),
    parts[3] if len(parts) == 4 else "",
)

# Remove everything but the 'version_info' from this module.
del namedtuple, _version_info, parts

__version__ = "{version}"
"""

[tool.ruff]
  src = ["src"]
  select = ["C", "E", "F", "W", "I", "C90", "RUF"]
  extend-exclude = ["pyvisa/thirdparty/*"]
  extend-ignore = ["E501", "RUF012"]
  line-length = 88

  [tool.ruff.isort]
    combine-as-imports = true
    known-first-party = ["pyvisa"]

  [tool.ruff.mccabe]
    max-complexity = 20


[tool.pytest.ini_options]
minversion = "6.0"

[tool.mypy]
follow_imports = "normal"
strict_optional = true

[[tool.mypy.overrides]]
module = [
    "pyvisa.thirdparty.*",
]
ignore_errors = true
