[metadata]
name = PyVISA
author = Torsten Bronger, Gregor Thalhammer
author_email = bronger@physik.rwth-aachen.de
maintainer = Matthieu C. Dartiailh
maintainer_email = m.dartiailh@gmail.com
license = MIT License
description = Python VISA bindings for GPIB, RS232, TCPIP and USB instruments
keywords =
    VISA
    GPIB
    USB
    serial
    RS232
    measurement
    acquisition
url = https://github.com/pyvisa/pyvisa
long_description = file: README.rst, AUTHORS, CHANGES
long_description_content_type = text/x-rst
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux
    Operating System :: MacOS :: MacOS X
    Programming Language :: Python
    Topic :: Scientific/Engineering :: Interface Engine/Protocol Translator
    Topic :: Software Development :: Libraries :: Python Modules
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
platforms = Linux,, Windows,, Mac

[options]
py_modules = visa
packages =
    pyvisa
    pyvisa.ctwrapper
    pyvisa.resources
    pyvisa.thirdparty
    pyvisa.testsuite
    pyvisa.testsuite.fake-extensions
    pyvisa.testsuite.fakelibs
    pyvisa.testsuite.keysight_assisted_tests
zip_safe = False
setup_requires = setuptools_scm>=3.4.3
install_requires =
    typing_extensions
    importlib-metadata; python_version<"3.8"
    dataclasses; python_version<"3.7"
python_requires = >=3.6
use_2to3 = False
platforms = Linux; Windows; Mac
test_suite = pyvisa.testsuite.testsuite
setup_require = setuptools>=42; wheel; setuptools_scm[toml]>=3.4.3

[options.entry_points]
console_scripts =
    pyvisa-shell=pyvisa.cmd_line_tools:visa_shell
    pyvisa-info=pyvisa.cmd_line_tools:visa_info

[options.package_data]
* = *.dll
pyvisa = py.typed

[flake8]
exclude =
    .git,
    __pycache__,
    docs/source/conf.py,
    old,
    build,
    dist,
    pyvisa/thirdparty/*,
    visa.py,
ignore = E203, E266, E501, W503, E731
# line length is intentionally set to 80 here because pyvisa uses Bugbear
# See https://github.com/psf/black/blob/master/README.md#line-length for more details
max-line-length = 80
max-complexity = 18
select = B,C,E,F,W,T4,B9
per-file-ignores =
    pyvisa/__init__.py:E402
    pyvisa/constants.py:E221

[mypy]
follow_imports = ignore
strict_optional = True

# XXX Ideally remove once pytest ships typing information
[mypy-pytest.*]
ignore_missing_imports = True

[mypy-pyvisa.thirdparty.*]
ignore_errors = True

[isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88
skip = pyvisa/thirdparty/prettytable.py, pyvisa/__init__.py
known_third_party = numpy,importlib_metadata,setuptools,typing_extensions, pytest
